--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@vercel/blob": "^0.19.0",
     "bcrypt": "^5.1.0",
     "client-only": "^0.0.1",
     "dayjs": "^1.11.8",
-    "eslint": "^8.41.0",
+    "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.32.2",
     "mongoose": "^7.2.1",
-    "next": "^13.4.5",
+    "next": "^14.1.0",
+    "next-auth": "^5.0.0-beta.5",
+    "randomstring": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.2.0",
+    "react-loading-skeleton": "^3.4.0",
     "react-tooltip": "^5.13.1",
     "sass": "^1.62.1",
     "server-only": "^0.0.1",
