--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "lint": "next lint"
   },
   "devDependencies": {
-    "eslint-config-next": "13.4.2"
+    "eslint-config-next": "13.4.2",
+    "stylelint": "^16.2.1",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-config-standard-scss": "^13.0.0"
   }
 }
