--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "MetroRailingsNext",
+  "name": "metro-railings-next",
   "version": "1.0.0",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@vercel/blob": "^0.19.0",
     "bcrypt": "^5.1.0",
