Mastering the whole App Router methodology to programming in Next and cleaning up some code

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -8,6 +8,7 @@
     "scss/at-mixin-argumentless-call-parentheses": false,
     "declaration-property-value-no-unknown": true,
     "declaration-block-no-redundant-longhand-properties": false,
-    "at-rule-empty-line-before": false
+    "at-rule-empty-line-before": false,
+    "scss/at-extend-no-missing-placeholder": false
   }
 }
