--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "classnames": "^2.5.1",
     "client-only": "^0.0.1",
     "dayjs": "^1.11.8",
+    "embla-carousel-autoplay": "^8.0.0",
+    "embla-carousel-react": "^8.0.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.32.2",
     "mongoose": "^7.2.1",
     "next": "^14.1.0",
     "next-auth": "^5.0.0-beta.5",
+    "outscraper": "^2.0.2",
     "randomstring": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,6 +27,7 @@
     "react-tooltip": "^5.13.1",
     "sass": "^1.62.1",
     "server-only": "^0.0.1",
+    "sharp": "^0.33.2",
     "validator": "^13.9.0"
   },
   "scripts": {
