--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.5.1",
     "client-only": "^0.0.1",
     "dayjs": "^1.11.8",
+    "dompurify": "^3.1.0",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "eslint": "^8.56.0",
