--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.2.0",
     "react-loading-skeleton": "^3.4.0",
+    "react-markdown": "^9.0.1",
     "react-tooltip": "^5.13.1",
     "sass": "^1.62.1",
     "server-only": "^0.0.1",
