--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "embla-carousel-react": "^8.0.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.32.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.4.0",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.5",
