Refactoring the code base to standardize things and separate out code where it makes sense

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "server-only": "^0.0.1",
     "sharp": "^0.33.2",
     "stripe": "^15.0.0",
+    "twilio": "^5.1.0",
     "validator": "^13.9.0"
   },
   "scripts": {
