Fixed build issues as well as some other little bugs. Getting ready to roll this out

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
     "es6" : true
   },
   "rules": {
-    "require-await" : "error"
+    "require-await" : "error",
+    "@next/next/no-html-link-for-pages": "off"
   }
 }
