--- a/migration/package.json
+++ b/migration/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "mongoose": "^8.4.0",
-    "stripe": "^15.0.0",
-    "twilio": "^5.1.0"
+    "stripe": "^15.0.0"
   },
   "type": "module",
   "scripts": {},
