--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-pdf/renderer": "^3.4.4",
     "@vercel/blob": "^0.19.0",
     "bcrypt": "^5.1.0",
     "classnames": "^2.5.1",
